<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#000000"
        android:gravity="center"
        android:paddingBottom="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:scaleType="centerCrop"
            android:contentDescription="@null"
            />
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title1"
            android:textSize="33sp"
            android:textColor="#C8C6C5"
            android:fontFamily="@font/playfair_display_bold"
            android:textStyle="bold"

            android:textAlignment="center"
             />
        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/description1"
            android:textAlignment="center"
            android:textColor="#ADABAA"
            android:textSize="18sp"
            android:lineSpacingExtra="6dp"
            android:paddingHorizontal="40dp"
            />
        <Button
            android:id="@+id/next_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="24dp"
            android:text="@string/next_btn"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp"
            app:cornerRadius="15dp"
            android:backgroundTint="@color/button"
            />
        <Button
            android:id="@+id/previous_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="24dp"
            android:text="@string/previous_btn"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"
            app:cornerRadius="15dp"
            android:backgroundTint="@color/button"
            />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>